Updated Frontend and Added .gitignore file

--- a/Public/index.html
+++ b/Public/index.html
@@ -6,25 +6,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Frontend For Express-Jwt Login System </title>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <style>
+        #user-info,
+        #logout-btn {
+            display: none;
+        }
+    </style>
 </head>
 
 <body>
     <center>
         <br><br> <br><br> <br><br> <br><br> <br><br>
-        <input id="Signup-Username" type="text" placeholder="Enter Username">
-        <br><br>
-        <input id="Signup-Password" type="password" placeholder="Enter password">
-        <br><br>
-        <button id="Signup-button" onclick="signup()">Signup</button>
-        <br><br>
-        <input id="Signin-Username" type="text" placeholder="Enter Username">
-        <br><br>
-        <input id="Signin-Password" type="password" placeholder="Enter password">
-        <br><br>
-        <button id="Sigin-button" onclick="signin()">Sigin</button>
-        <h3>User Information :</h3>
-        <P id="User-username"></P>
-        <P id="User-password"></P>
+        <div id="signup-signin">
+            <input id="Signup-Username" type="text" placeholder="Enter Username">
+            <br><br>
+            <input id="Signup-Password" type="password" placeholder="Enter password">
+            <br><br>
+            <button id="Signup-button" onclick="signup()">Signup</button>
+            <br><br>
+            <input id="Signin-Username" type="text" placeholder="Enter Username">
+            <br><br>
+            <input id="Signin-Password" type="password" placeholder="Enter password">
+            <br><br>
+            <button id="Sigin-button" onclick="signin()">Sigin</button>
+        </div>
+        <div id="user-info">
+            <h3>User Information :</h3>
+            <P id="User-username"></P>
+            <P id="User-password"></P>
+        </div>
         <br><br>
         <button id="logout-btn" onclick="logout()">LogOut</button>
     </center>
@@ -36,11 +46,17 @@
             const password = document.getElementById("Signup-Password").value;
 
 
-            await axios.post("http://localhost:3000/signup", {
-                username: username,
-                password: password
-            })
-            alert("You are signed up")
+            try {
+                await axios.post("http://localhost:3000/signup", {
+                    username: username,
+                    password: password
+                })
+                alert("You are signed up")
+                document.getElementById("Signup-Username").value = "";
+                document.getElementById("Signup-Password").value = "";
+            } catch (error) {
+                alert(error.response.data.message);
+            }
 
         };
 
@@ -61,6 +77,11 @@
                     getUserInfo();
                 }
 
+                document.getElementById("user-info").style.display = "block";
+                document.getElementById("logout-btn").style.display = "block";
+                document.getElementById("signup-signin").style.display = "none";
+                document.getElementById("Signin-Username").value = "";
+                document.getElementById("Signin-Password").value = "";
             } catch (error) {
                 alert(error.response.data.message);
             }
@@ -73,24 +94,28 @@
                 alert("No token found, please sign in.");
                 return;
             }
-            try{
+            try {
                 const response = await axios.get("http://localhost:3000/me", {
-                headers: {
-                    "Authorization": token
-                }
-            })
-            document.getElementById("User-username").innerHTML = "username: " + response.data.username
-            document.getElementById("User-password").innerHTML = "username: " + response.data.password
-            }catch(error){
+                    headers: {
+                        "Authorization": token
+                    }
+                })
+                document.getElementById("User-username").innerHTML = "username: " + response.data.username
+                document.getElementById("User-password").innerHTML = "username: " + response.data.password
+            } catch (error) {
                 alert("Error fetching user info: " + error.response.data.message);
             }
-           
+
         }
 
         function logout() {
             localStorage.removeItem("token");
-            document.getElementById("User-username").innerHTML = " ";
-            document.getElementById("User-password").innerHTML = " ";
+            document.getElementById("User-username").innerHTML = "";
+            document.getElementById("User-password").innerHTML = "";
+            document.getElementById("user-info").style.display = "none";
+            document.getElementById("logout-btn").style.display = "none";
+            document.getElementById("signup-signin").style.display = "block";
+           
             alert("You have logged out.");
         }
 
